rtpmux: Forward sticky events on buffer lists too, not only on buffers

https://bugzilla.gnome.org/show_bug.cgi?id=764933